@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <version>1003</version>
+  <dependencies>
+    <!--dependency>profile-plone.app.imaging:default</dependency-->
+  </dependencies>
 </metadata>
